Add burrito-bowl.html and a link in index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/burrito-bowl.html">Ultimate Tofu Breakfast Burrito Bowls</a>
 </body>
 </html>
