Add burrito-bowl image and edit burrito-bowl.html

--- a/recipes/burrito-bowl.html
+++ b/recipes/burrito-bowl.html
@@ -7,5 +7,83 @@
 
 <body>
     <h1>Ultimate Tofu Breakfast Burrito Bowls</h1>
+
+    <img src="../images/ultimate-tofu-breakfast-burrito-bowls-allrecipes.jpg" alt="Tofu breakfast burrito bowl" style="width: 40%; height: 40%;">
+
+    <h2>Description</h2>
+
+    <p>
+        Tofu scrambles up just like eggs, and with some clever spices,
+        even non-vegans will barely notice the difference. Try setting
+        out toppings to let family or guests assemble their own burrito
+        bowls.
+    </p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>3 tablespoons olive oil, divided</li>
+        <li>1 (14 ounce) package extra-firm tofu, drained</li>
+        <li>&half; teaspoon salt </li>
+        <li>black pepper to taste</li>
+        <li>1 &half; teaspoons onion powder</li>
+        <li>1 &half; teaspoons garlic powder</li>
+        <li>&half; teaspoon ground tumeric</li>
+        <li>1 tablespoon fresh lemon juice</li>
+        <li>1 tablespoon olive oil</li>
+        <li>1 cup finely diced red onion</li>
+        <li>2 jalapeno peppers, seeded and chopped</li>
+        <li>&half; teaspoon salt</li>
+        <li>3 cloves garlic, minced</li>
+        <li>2 cups chopped tomatoes</li>
+        <li>1 &half; teaspoons cumin</li>
+        <li>&frac14; cup chopped fresh cilantro</li>
+        <li>1 tablespoon fresh lemon juice</li>
+        <li>1 (15.5 ounce) can no-salt-added black beans, drained and rinsed</li>
+        <li>1 &half; cups cooked hash brown potatoes</li>
+        <li>1 avocado - peeled, pitted and sliced</li>
+        <li>1 teaspoon fresh lemon juice</li>
+        <li>&frac14; cup chopped fresh cilantro</li>
+        <li>1 teaspoon hot sauce, or to taste</li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>
+            Preheat a large, heavy skillet over medium-high heat.
+            Add 2 tablespoons oil. Break tofu apart over skillet into
+            bite-size pieces, sprinkle with salt and pepper, then cook,
+            stirring frequently with a thin metal spatula, until liquid
+            cooks out and tofu browns, about 10 minutes.(If you notice
+            liquid collecting in pan, increase heat to evaporate water.)
+            Be sure to get under the tofu when you stir, scraping the bottom
+            of the pan where the good, crispy stuff is and keeping it from
+            sticking.
+        </li>
+        <br>
+        <li>
+            Add onion and garlic powders, turmeric, juice, and remaining
+            tablespoon oil and toss to coat. Cook 5 minutes more.
+        </li>
+        <br>
+        <li>
+            Preheat a heavy-bottomed saucepan over medium-high heat. Add oil.
+            Cook onion and jalapenos with a pinch of salt, stirring, until
+            translucent, about 5 minutes, Add garlic and cook, stirring, until
+            fragrant, about 30 seconds. Add tomatoes, cumin, and remaining salt,
+            and cook, stirring, until tomatoes become saucy, about 5 minutes.
+            Add cilantro and lemon juice. Let cilantro wilt in. Add beans and
+            heat through, stirring occasionally, about 2 minutes. Taste for
+            salt and seasoning.
+        </li>
+        <br>
+        <li>
+            Spoon some hash browns into each bowl, followed by a scoop of beans
+            and a scoop of scramble. Top with avocado, a squeeze of fresh lemon
+            juice, and a sprinkle of cilantro. Serve with hot sauce.
+        </li>
+    </ol>
+    </ul>
 </body>
 </html>
