Add soup.html and quesadillas.html images included
Update index.html to include a list of links to the recipes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/burrito-bowl.html">Ultimate Tofu Breakfast Burrito Bowls</a>
+    <ul>
+        <li><a href="recipes/burrito-bowl.html">Ultimate Tofu Breakfast Burrito Bowls</a></li>
+        <li><a href="recipes/soup.html">Vegetarian Potato-Leek Soup</a></li>
+        <li><a href="recipes/quesadillas.html"></a></li>
+    </ul>
 </body>
 </html>
