Convert burrito-bowl and quesadilla images to webp
Edit index.html as text is missing for the quesadilla link.

--- a/recipes/burrito-bowl.html
+++ b/recipes/burrito-bowl.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Ultimate Tofu Breakfast Burrito Bowls</h1>
 
-    <img src="../images/ultimate-tofu-breakfast-burrito-bowls-allrecipes.jpg" alt="Tofu breakfast burrito bowl" style="width: 40%; height: 40%;">
+    <img src="../images/ultimate-tofu-breakfast-burrito-bowls-allrecipes.webp" alt="Tofu breakfast burrito bowl">
 
     <h2>Description</h2>
 
