--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="recipes/burrito-bowl.html">Ultimate Tofu Breakfast Burrito Bowls</a></li>
         <li><a href="recipes/soup.html">Vegetarian Potato-Leek Soup</a></li>
-        <li><a href="recipes/quesadillas.html"></a></li>
+        <li><a href="recipes/quesadillas.html">Farmers Market Vegetarian Quesadillas</a></li>
     </ul>
 </body>
 </html>
