--- a/recipes/quesadillas.html
+++ b/recipes/quesadillas.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Farmer's Market Vegetarian Quesadillas</h1>
     
-    <img src="../images/farmers-market-vegetarian-quesadillas-allrecipes.jpg" alt="Vegetarian Quesadillas" style="width: 40%; height: 40%;">
+    <img src="../images/farmers-market-vegetarian-quesadillas-allrecipes.webp" alt="Vegetarian Quesadillas">
 </body>
 </html>
