Edit soup.html and quesadillas.html

--- a/recipes/quesadillas.html
+++ b/recipes/quesadillas.html
@@ -9,5 +9,49 @@
     <h1>Farmer's Market Vegetarian Quesadillas</h1>
     
     <img src="../images/farmers-market-vegetarian-quesadillas-allrecipes.webp" alt="Vegetarian Quesadillas">
+
+    <h2>Description</h2>
+
+    <p>
+        Making the most of simple, fresh ingredients found at your
+        local farmers' market, these vegetarian quesadillas make
+        great appetizers or a quick and healthy meal. Serve while
+        hot with your favorite salsa, sour cream, and guacamole.
+    </p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>&frac12; cup chopped red bell pepper</li>
+        <li>&frac12; cup chopped zucchini</li>
+        <li>&frac12; cup chopped yellow squash</li>
+        <li>&frac12; cup chopped red onion</li>
+        <li>&frac12; cup chopped mushrooms</li>
+        <li>1 tablespoon olive oil</li>
+        <li>cooking spray</li>
+        <li>6 (9 inch) whole wheat tortillas</li>
+        <li>1 &frac14; cups shredded reduced-fat sharp Cheddar cheese</li>
+    </ul>
+
+    <h2>Steps</h2>
+    
+    <ol>
+        <li>
+            Cook red pepper, zucchini, yellow squash, onion, and mushrooms
+            in olive oil in a large nonstick skillet over medium to
+            medium-high heat until just tender, about 7 minutes.
+            Transfer vegetables to a bowl.
+        </li>
+        <br>
+        <li>
+            Coat same skillet with cooking spray; place one tortilla in
+            skillet. Sprinkle 1/4 cup cheese evenly over tortilla; layer
+            3/4 cup vegetable mixture on top. Sprinkle 1/8 cup more
+            cheese on vegetables; top with a second tortilla. Cook
+            until golden on both sides, about 2 to 3 minutes per side.
+            Transfer quesadilla to a cutting board; cut into 8 triangles
+            with a pizza cutter. Repeat with remaining ingredients. Serve hot.
+        </li>
+    </ol>
 </body>
 </html>
