--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -9,5 +9,48 @@
     <h1>Vegetarian Potato Leek Soup</h1>
 
     <img src="../images/vegetarian-potato-leak-soup-allrecipes.webp" alt="Potato-leak soup"> 
+
+    <h2>Description</h2>
+
+    <p>
+        Healthy potato-leek soup for vegetarians.
+    </p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>&frac14; cup olive oil, divided</li>
+        <li>2 leeks, chopped</li>
+        <li>1 (32 fluid ounce) container vegetable broth</li>
+        <li>1 &frac34; cups water</li>
+        <li>2 pounds potatoes, cut into cubes</li>
+        <li>&frac38; teaspoon cayenne pepper</li>
+        <li>&frac14; teaspoon salt</li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>
+            Heat 2 tablespoons olive oil in a stock pot over medium
+            heat. Cook and stir leeks in hot oil until completely
+            softened, adding remaining olive oil in small amounts
+            as you cook the leeks, about 10 minutes.
+        </li>
+        <br>
+        <li>
+            Pour vegetable broth and water into the pot; add potatoes.
+            Bring mixture to a boil, reduce heat to medium-low, and
+            cook at a simmer until the potatoes are completely tender,
+            about 25 minutes.
+        </li>
+        <br>
+        <li>
+            Pour potato mixture into a blender no more than half full.
+            Cover and hold lid down; pulse a few times before leaving
+            on to blend. Puree in batches until smooth. Stir cayenne
+            pepper and salt into the soup.
+        </li>
+    </ol>
 </body>
 </html>
