Edit soup.html and README.md

--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vegetarian Potato Leek Soup</title>
+    <title>Vegetarian Potato-Leek Soup</title>
 </head>
 
 <body>
-    <h1>Vegetarian Potato Leek Soup</h1>
+    <h1>Vegetarian Potato-Leek Soup</h1>
 
     <img src="../images/vegetarian-potato-leak-soup-allrecipes.webp" alt="Potato-leak soup"> 
 
