Add version 2.0 with some basic CSS additions

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
         <li><a href="recipes/soup.html">Vegetarian Potato-Leek Soup</a></li>
         <li><a href="recipes/quesadillas.html">Farmers Market Vegetarian Quesadillas</a></li>
     </ul>
+
+    <footer>
+        <h2><b>Version 2.0</b></h2>
+        <a href="index-v2.html">Basic CSS additions</a>
+    </footer>
 </body>
 </html>
